[package]
name = "raisin"
version = "0.1.0"
edition = "2021"
authors = ["Crypdough.eth"]
description = "CLI tool to interact with Raisin without a UI."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
dotenv = "0.15.0"
ethers = { version = "2.0", features = ["rustls"] }
rpassword = "7.2.0"
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
